@@ -35,6 +35,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19082: Working SimpleXMLRPCServer and xmlrpclib examples, both in
+  modules and documentation.
+
 - Issue #13107: argparse and optparse no longer raises an exception when output
   a help on environment with too small COLUMNS.  Based on patch by
   Elazar Gershuni.
